--- a/First100-tokens-Gamma-rotten-tomato.ipynb
+++ b/First100-tokens-Gamma-rotten-tomato.ipynb
@@ -198,7 +198,7 @@
     "# # Allocate GPU\n",
     "# device = torch.device(\"cuda:7\")\n",
     "\n",
-    "# token = \"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\"\n",
+    "# token = \"*"\n",
     "\n",
     "# # Initialize the tokenizer and model for the primary task\n",
     "# tokenizer = AutoTokenizer.from_pretrained('google/gemma-7b-it', token=token) #7b\n",
